@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: line 1:19 Argument Type Mismatch 2.0: The expressions after COALESCE should all have the same type: "int" is expected but "double" is found
