@@ -1,0 +1,168 @@
+query: EXPLAIN
+SELECT COALESCE(1),
+       COALESCE(1, 2),
+       COALESCE(NULL, 2),
+       COALESCE(1, NULL),
+       COALESCE(NULL, NULL, 3),
+       COALESCE(4, NULL, NULL, NULL),
+       COALESCE('1'),
+       COALESCE('1', '2'),
+       COALESCE(NULL, '2'),
+       COALESCE('1', NULL),
+       COALESCE(NULL, NULL, '3'),
+       COALESCE('4', NULL, NULL, NULL),
+       COALESCE(1.0),
+       COALESCE(1.0, 2.0),
+       COALESCE(NULL, 2.0),
+       COALESCE(NULL, 2.0, 3.0),
+       COALESCE(2.0, NULL, 3.0),
+       COALESCE(IF(TRUE, NULL, 0), NULL)
+FROM src LIMIT 1
+ABSTRACT SYNTAX TREE:
+  (TOK_QUERY (TOK_FROM (TOK_TABREF src)) (TOK_INSERT (TOK_DESTINATION (TOK_DIR TOK_TMP_FILE)) (TOK_SELECT (TOK_SELEXPR (TOK_FUNCTION COALESCE 1)) (TOK_SELEXPR (TOK_FUNCTION COALESCE 1 2)) (TOK_SELEXPR (TOK_FUNCTION COALESCE TOK_NULL 2)) (TOK_SELEXPR (TOK_FUNCTION COALESCE 1 TOK_NULL)) (TOK_SELEXPR (TOK_FUNCTION COALESCE TOK_NULL TOK_NULL 3)) (TOK_SELEXPR (TOK_FUNCTION COALESCE 4 TOK_NULL TOK_NULL TOK_NULL)) (TOK_SELEXPR (TOK_FUNCTION COALESCE '1')) (TOK_SELEXPR (TOK_FUNCTION COALESCE '1' '2')) (TOK_SELEXPR (TOK_FUNCTION COALESCE TOK_NULL '2')) (TOK_SELEXPR (TOK_FUNCTION COALESCE '1' TOK_NULL)) (TOK_SELEXPR (TOK_FUNCTION COALESCE TOK_NULL TOK_NULL '3')) (TOK_SELEXPR (TOK_FUNCTION COALESCE '4' TOK_NULL TOK_NULL TOK_NULL)) (TOK_SELEXPR (TOK_FUNCTION COALESCE 1.0)) (TOK_SELEXPR (TOK_FUNCTION COALESCE 1.0 2.0)) (TOK_SELEXPR (TOK_FUNCTION COALESCE TOK_NULL 2.0)) (TOK_SELEXPR (TOK_FUNCTION COALESCE TOK_NULL 2.0 3.0)) (TOK_SELEXPR (TOK_FUNCTION COALESCE 2.0 TOK_NULL 3.0)) (TOK_SELEXPR (TOK_FUNCTION COALESCE (TOK_FUNCTION IF TRUE TOK_NULL 0) TOK_NULL))) (TOK_LIMIT 1)))
+
+STAGE DEPENDENCIES:
+  Stage-1 is a root stage
+  Stage-0 is a root stage
+
+STAGE PLANS:
+  Stage: Stage-1
+    Map Reduce
+      Alias -> Map Operator Tree:
+        src 
+            Select Operator
+              Select Operator
+                expressions:
+                      expr: COALESCE(1)
+                      type: int
+                      expr: COALESCE(1,2)
+                      type: int
+                      expr: COALESCE(null,2)
+                      type: int
+                      expr: COALESCE(1,null)
+                      type: int
+                      expr: COALESCE(null,null,3)
+                      type: int
+                      expr: COALESCE(4,null,null,null)
+                      type: int
+                      expr: COALESCE('1')
+                      type: string
+                      expr: COALESCE('1','2')
+                      type: string
+                      expr: COALESCE(null,'2')
+                      type: string
+                      expr: COALESCE('1',null)
+                      type: string
+                      expr: COALESCE(null,null,'3')
+                      type: string
+                      expr: COALESCE('4',null,null,null)
+                      type: string
+                      expr: COALESCE(1.0)
+                      type: double
+                      expr: COALESCE(1.0,2.0)
+                      type: double
+                      expr: COALESCE(null,2.0)
+                      type: double
+                      expr: COALESCE(null,2.0,3.0)
+                      type: double
+                      expr: COALESCE(2.0,null,3.0)
+                      type: double
+                      expr: COALESCE(if true, null, 0,null)
+                      type: int
+                Limit
+                  File Output Operator
+                    compressed: false
+                    GlobalTableId: 0
+                    table:
+                        input format: org.apache.hadoop.mapred.TextInputFormat
+                        output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+
+  Stage: Stage-0
+    Fetch Operator
+      limit: 1
+
+
+query: SELECT COALESCE(1),
+       COALESCE(1, 2),
+       COALESCE(NULL, 2),
+       COALESCE(1, NULL),
+       COALESCE(NULL, NULL, 3),
+       COALESCE(4, NULL, NULL, NULL),
+       COALESCE('1'),
+       COALESCE('1', '2'),
+       COALESCE(NULL, '2'),
+       COALESCE('1', NULL),
+       COALESCE(NULL, NULL, '3'),
+       COALESCE('4', NULL, NULL, NULL),
+       COALESCE(1.0),
+       COALESCE(1.0, 2.0),
+       COALESCE(NULL, 2.0),
+       COALESCE(NULL, 2.0, 3.0),
+       COALESCE(2.0, NULL, 3.0),
+       COALESCE(IF(TRUE, NULL, 0), NULL)
+FROM src LIMIT 1
+Input: default/src
+Output: file:/data/users/zshao/tools/495-trunk-apache-hive/build/ql/tmp/64965527/10000
+1	1	2	1	3	4	1	1	2	1	3	4	1.0	1.0	2.0	2.0	2.0	NULL
+query: EXPLAIN
+SELECT COALESCE(src_thrift.lint[1], 999),
+       COALESCE(src_thrift.lintstring[0].mystring, '999'),
+       COALESCE(src_thrift.mstringstring['key_2'], '999')
+FROM src_thrift
+ABSTRACT SYNTAX TREE:
+  (TOK_QUERY (TOK_FROM (TOK_TABREF src_thrift)) (TOK_INSERT (TOK_DESTINATION (TOK_DIR TOK_TMP_FILE)) (TOK_SELECT (TOK_SELEXPR (TOK_FUNCTION COALESCE ([ (. (TOK_TABLE_OR_COL src_thrift) lint) 1) 999)) (TOK_SELEXPR (TOK_FUNCTION COALESCE (. ([ (. (TOK_TABLE_OR_COL src_thrift) lintstring) 0) mystring) '999')) (TOK_SELEXPR (TOK_FUNCTION COALESCE ([ (. (TOK_TABLE_OR_COL src_thrift) mstringstring) 'key_2') '999')))))
+
+STAGE DEPENDENCIES:
+  Stage-1 is a root stage
+  Stage-0 is a root stage
+
+STAGE PLANS:
+  Stage: Stage-1
+    Map Reduce
+      Alias -> Map Operator Tree:
+        src_thrift 
+            Select Operator
+              expressions:
+                    expr: lint
+                    type: array<int>
+                    expr: lintstring
+                    type: array<struct<myint:int,mystring:string,underscore_int:int>>
+                    expr: mstringstring
+                    type: map<string,string>
+              Select Operator
+                expressions:
+                      expr: COALESCE(0[1],999)
+                      type: int
+                      expr: COALESCE(1[0].mystring,'999')
+                      type: string
+                      expr: COALESCE(2['key_2'],'999')
+                      type: string
+                File Output Operator
+                  compressed: false
+                  GlobalTableId: 0
+                  table:
+                      input format: org.apache.hadoop.mapred.TextInputFormat
+                      output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+
+  Stage: Stage-0
+    Fetch Operator
+      limit: -1
+
+
+query: SELECT COALESCE(src_thrift.lint[1], 999),
+       COALESCE(src_thrift.lintstring[0].mystring, '999'),
+       COALESCE(src_thrift.mstringstring['key_2'], '999')
+FROM src_thrift
+Input: default/src_thrift
+Output: file:/data/users/zshao/tools/495-trunk-apache-hive/build/ql/tmp/2056249139/10000
+0	0	999
+2	1	999
+4	8	value_2
+6	27	999
+8	64	999
+10	125	999
+12	216	999
+14	343	999
+16	512	999
+18	729	999
+999	999	999
